Improve proto generation/lint/format
